--- a/insex.html
+++ b/insex.html
@@ -94,13 +94,60 @@
                 </li>
                 
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
+
+      <section class="hero">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="slide/slide college2.jpg" class="d-block w-100" alt="college">
+              <div class="carousel-container">
+                <div class="carousel-topics container">
+                  <h3 class="carousel-heading-topics"><span>Cox's Bazar</span>Polytechnic Institute</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
+                  <div>
+                    <button class="btn btn-outline-light"> Read More <i class="fa-solid fa-phone"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="slide/slide1.jpg" class="d-block w-100" alt="group picture">
+              <div class="carousel-container">
+                <div class="carousel-topics container">
+                  <h3 class="carousel-heading-topics"><span>Cox's Bazar</span>Polytechnic Institute</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
+                  <div>
+                    <button class="btn btn-outline-light"> Read More <i class="fa-solid fa-phone"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="slide/slide.jpg" class="d-block w-100" alt="picture">
+              <div class="carousel-container">
+                <div class="carousel-topics container">
+                  <h3 class="carousel-heading-topics"><span>Cox's Bazar</span>Polytechnic Institute</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
+                  <div>
+                    <button class="btn btn-outline-light"> Read More <i class="fa-solid fa-phone"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
 
     
     <!-- Import Bootstrap 5 JS-->
