--- a/insex.html
+++ b/insex.html
@@ -109,19 +109,19 @@
                   <h3 class="carousel-heading-topics">Cox's Bazar Polytechnic Institute</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
                   <div>
-                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-solid fa-phone"></i></button>
+                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                   </div>
                 </div>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img src="slide/slide1.jpg" class="d-block w-100" alt="group picture">
+              <img src="slide/slide cox3.jpg" class="d-block w-100" alt="group picture">
               <div class="carousel-container">
                 <div class="carousel-topics container">
                   <h3 class="carousel-heading-topics"><span>Cox's Bazar</span> Polytechnic Institute</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
                   <div>
-                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-solid fa-phone"></i></button>
+                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                   </div>
                 </div>
               </div>
@@ -133,7 +133,7 @@
                   <h3 class="carousel-heading-topics"><span>Cox's Bazar</span> Polytechnic Institute</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla libero perspiciatis accusantium excepturi, dignissimos culpa doloribus quod quas iure natus? Quidem, explicabo et? Vitae explicabo corrupti dicta reprehenderit deleniti labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero illum beatae fuga labore quidem obcaecati.</p>
                   <div>
-                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-solid fa-phone"></i></button>
+                    <button class="btn btn-outline-light" style="color: rgb(0, 0, 0);"> Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                   </div>
                 </div>
               </div>
@@ -192,6 +192,112 @@
               </div>
             </div>
           </div>
+          </div>
+        </div>
+      </section>
+
+
+
+      <!-- About Section -->
+
+      <section class="about-section bg-light pt-5 pb-5">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-md-6 left-info">
+              <div class="heading">
+                <h2 class="fw-bold pb-3">About Us</h2>
+              </div>
+              <h4 class="cpbi">Cox’s Bazar Polytechnic Institute</h4> <br>
+              <p style="text-align: justify;">Cox’s Bazar is an international tourist’s destination, a fishing port and district head quarter in Bangladesh. As one of the most beautiful and famous tourist spot in Bangladesh, the major source of economy in Cox’s Bazar is tourism. Million of foreigners, Bangladeshi natives visit this coastal city every year. As results, a number of hotels and motels, restaurants, construction and IT farms have been built in the city. Many people are involved in hospitality and customer service oriented business. Cox’s Bazar Polytechnic Institute is the Modern Polytechnic Institute in Bangladesh. It is the only one mid level Engineering Institution in South Chittagong. It was established in 2004 with only 29 students in the first year classes of 4 Year Diploma-In-Engineering in one technology, namely Computer Technology. The Institute now offers courses in 4 Year Diploma-In-Engineering in four technologies, with two shift namely Computer, Refrigeration & Air-conditioning, Civil & Food Technology with its Geographical importance.</p>
+              <p style="text-align: justify;"> The main campus includes of two five storied building one of them Administrative building which are accommodating Office, Library, Prayer room, IT centre, Language centre & 300 capacities Auditorium and another one consists of class rooms, workshops & laboratories.There are Two-storied large workshop buildings which are accommodating Workshop and Laboratories. There are about One thousand and two hundred students including female and tribes studying in various departments having most qualified teachers and supporting staffs. So far, Cox’s Bazar Polytechnic Institute established its own identity over the home and abroad. As an Engineering institution Cox’s Bazar Polytechnic institute is playing significant roles in developing skilled manpower in local and national economy</p>
+              <div>
+                <button class="btn btn-outline-dark">Read More <i class="fa-sharp fa-solid fa-arrow-right"></i> </button>
+              </div>
+            </div>
+            <div class="col-md-4 right-info border m-auto vertical-middle p-3">
+               <div class="user-img mx-auto">
+                <img class="rounded mx-auto d-block"  src="teacher info/Mohsinur-Rahman.jpg" alt="principal pic">
+               </div>
+               <div class="user-info text-center mt-2">
+                <h5 class="fw-bold">Md.Mohsinur Rahman</h5>
+                <h6>Principal Of Cox’s Bazar Polytechnic Institute</h6>
+                <h6><i class="fa-solid fa-phone"></i>+880341-63388</h6>
+                <button class="btn btn-outline-dark text-center mt-2"><i class="fa-solid fa-envelope"></i> Message</button>
+               </div>
+               <div>
+                
+               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="course-section pt-5 pb-5">
+        <div class="container">
+          <div class="text-center pb-4">
+            <h2 class="fw-bold">Course</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-3  mb-2 mb-lg-0">
+              <div class="card">
+                <img src="course/CST.webp" alt="Computer">
+                <div class="card-body">
+                  <h5 class="card-title course-heading">Computer Science Engineering</h5>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
+                  <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3  mb-2 mb-lg-0">
+              <div class="card">
+                <img src="course/Civil.jpg" alt="Civil">
+                <div class="card-body">
+                  <h5 class="card-title course-heading">Civil Engineering</h5>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
+                  <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3  mb-2 mb-lg-0">
+              <div class="card">
+                <img src="course/electrical .jpg" alt="electrical">
+                <div class="card-body">
+                  <h5 class="card-title course-heading">Electrical Engineering</h5>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3  mb-2 mb-lg-0">
+              <div class="card">
+                <img src="course/food.jpg" alt="food">
+                <div class="card-body">
+                  <h5 class="card-title course-heading">Food Engineering</h5>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3  mb-2 mb-lg-0">
+              <div class="card">
+                <img src="course/RAC.jpeg" alt="RAC">
+                <div class="card-body">
+                  <h5 class="card-title course-heading">RAC Engineering</h5>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            
           </div>
         </div>
       </section>
