--- a/insex.html
+++ b/insex.html
@@ -231,6 +231,8 @@
           </div>
         </div>
       </section>
+
+
       <section class="course-section pt-5 pb-5">
         <div class="container">
           <div class="text-center pb-4">
@@ -241,9 +243,9 @@
               <div class="card">
                 <img src="course/CST.webp" alt="Computer">
                 <div class="card-body">
-                  <h5 class="card-title course-heading">Computer Science Engineering</h5>
+                  <h5 class="card-title course-heading">Computer Engineering</h5>
                   <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
+                  <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
                   <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
               </div>
@@ -255,7 +257,7 @@
                 <div class="card-body">
                   <h5 class="card-title course-heading">Civil Engineering</h5>
                   <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
+                  <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam. Lorem ipsum dolor sit amet.</p>
                   <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
               </div>
@@ -267,7 +269,7 @@
                 <div class="card-body">
                   <h5 class="card-title course-heading">Electrical Engineering</h5>
                   <hr>
-                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <p style="text-align: justify;">Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
                   <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
               </div>
@@ -279,7 +281,7 @@
                 <div class="card-body">
                   <h5 class="card-title course-heading">Food Engineering</h5>
                   <hr>
-                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <p style="text-align: justify;">Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
                   <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
               </div>
@@ -291,7 +293,7 @@
                 <div class="card-body">
                   <h5 class="card-title course-heading">RAC Engineering</h5>
                   <hr>
-                  <p>Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
+                  <p  style="text-align: justify;">Lorem ipsum dolor sit amet chuuh Lorem ipsum dolor sit amet.</p>
                   <a href="" class="btn btn-outline-dark">Read More <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
               </div>
