--- a/insex.html
+++ b/insex.html
@@ -207,7 +207,7 @@
           <div class="row justify-content-between">
             <div class="col-md-6 left-info mb-5 mb-lg-0">
               <div class="heading">
-                <h2 class="fw-bold pb-3">About Us</h2>
+                <h2 class="fw-bold pb-3">About Our Institute</h2>
               </div>
               <h4 class="cpbi">Cox’s Bazar Polytechnic Institute</h4> <br>
               <p style="text-align: justify;">Cox’s Bazar is an international tourist’s destination, a fishing port and district head quarter in Bangladesh. As one of the most beautiful and famous tourist spot in Bangladesh, the major source of economy in Cox’s Bazar is tourism. Million of foreigners, Bangladeshi natives visit this coastal city every year. As results, a number of hotels and motels, restaurants, construction and IT farms have been built in the city. Many people are involved in hospitality and customer service oriented business. Cox’s Bazar Polytechnic Institute is the Modern Polytechnic Institute in Bangladesh. It is the only one mid level Engineering Institution in South Chittagong. It was established in 2004 with only 29 students in the first year classes of 4 Year Diploma-In-Engineering in one technology, namely Computer Technology. The Institute now offers courses in 4 Year Diploma-In-Engineering in four technologies, with two shift namely Computer, Refrigeration & Air-conditioning, Civil & Food Technology with its Geographical importance.</p>
@@ -237,7 +237,7 @@
       <section class="course-section pt-5 pb-5">
         <div class="container">
           <div class="text-center pb-4">
-            <h2 class="fw-bold">Teacher Information</h2>
+            <h2 class="fw-bold">Our Teacher</h2>
           </div>
           <div class="row">
             <div class="col-md-3  mb-2 mb-lg-0">
