--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
             </div>
             <div class="col-md-4 right-info border m-auto vertical-middle p-3">
                <div class="user-img mx-auto">
-                <img class="rounded mx-auto d-block"  src="teacher info/Mohsinur-Rahman.jpg" alt="principal pic">
+                <img class="rounded mx-auto d-block"  src="teacher info/principal pic.jpeg" alt="principal pic">
                </div>
                <div class="user-info text-center mt-2">
-                <h5 class="fw-bold">Md.Mohsinur Rahman</h5>
+                <h5 class="fw-bold">প্রকৌ. প্রদীপ্ত খীসা</h5>
                 <h6>Principal Of Cox’s Bazar Polytechnic Institute</h6>
-                <h6><i class="fa-solid fa-phone"></i>+880341-63388</h6>
+                <h6><i class="fa-solid fa-phone"></i> 01715747546</h6>
                 <button class="btn btn-outline-dark text-center mt-2"><i class="fa-solid fa-envelope"></i> Message</button>
                </div>
             </div>
